# kwin-wallpaper-torch

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  metadata.json  wallpapertorch.cpp  wallpapertorch.h
